# ione

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.claude/: settings.json
.claude/rules/: path-2-stream-p.md
.codex/: session-handoff.md
.github/workflows/: ci.yml
config/: broker_providers.toml
docs/: ione_schematic.key  ione_schematic.pptx  v0.3-provenance-and-semantic-layer.md
infra/fixtures/: firms_sample.csv  irwin_incidents.json
infra/keycloak/: realm.json
md/archive/: backlog-implementation-plan.md  document-view-plan.md  foreign-tenant-mapping-plan.md  geojson-poll-connector-plan.md  ione-v1-plan.md  map-view-plan.md  observability-data-plane-plan.md  peer-token-refresh-plan.md
md/design/: app-integration-playbook.md  app-integration-state-machine.md  audit-event-export.md  auto-exec-governance.md  chart-panel.md  document-view.md  event-point-layer.md  federated-catalog-search.md  foreign-tenant-mapping.md  geojson-poll-connector.md  headless-provisioning.md  identity-broker.md  ione-complete-contract.md  ione-complete.md  ione-substrate.md  ione-v1-contract.md  ione-v1.md  map-view.md  mcp-federation.md  observability-data-plane.md  openapi-connectors.md  peer-token-refresh.md  push-ingress.md  rbac-scaffolding.md  rule-engine-offline-reliability.md  table-view.md
md/intake/: tri-thrust-advance-2026-06-21.md
md/plans/: audit-event-export-plan.md  chart-panel-plan.md  connector-auth-plan.md  event-point-layer-plan.md  foreign-tenant-mapping-plan.md  identity-broker-plan.md  infrastructure-backlog.md  ione-complete-plan.md  ione-review-fixes-plan.md  ione-v1-plan.md  push-ingress-plan.md  rbac-scaffolding-plan.md  table-view-plan.md  (+2 more)
migrations/: 0001_initial.sql  0002_workspaces.sql  0003_connectors.sql  0004_signals.sql  0005_survivors.sql  0006_routing.sql  0007_roles_unique_by_name_coclevel.sql  0008_trust_issuers.sql  0009_artifacts_approvals_audit.sql  0010_peers.sql  0012_pipeline_events.sql  0013_activation.sql  0014_funnel_events.sql  0015_oauth.sql  0016_peers_oauth.sql  0017_peer_token_ciphertext.sql  0018_peer_oauth_pending.sql  0019_user_sessions_audit.sql  0020_trust_issuers_oidc.sql  0021_mfa.sql  0022_broker_credentials.sql  0023_peers_org_id.sql  0024_peers_org_id_trigger.sql  0025_workspace_peer_bindings.sql  0026_audit_events_foreign_tenant.sql  0027_peer_webhook_secret.sql  0028_webhook_dedup.sql  0029_signals_approval_required.sql  0030_streams_view_config.sql  0031_stream_events_dedup_key.sql  0032_peer_refresh_token_ciphertext.sql  0033_peer_federation.sql  0034_pending_peer_tool_call.sql  0035_rule_diagnostics.sql  0036_pipeline_events_rule_diagnostic_stage.sql  0037_pending_peer_tool_call_peer_id_idempotency.sql  0038_audit_export_indexes.sql  0039_rbac.sql  0040_auto_exec_policies.sql  0041_service_account_tokens.sql  (+5 more)
scripts/: a11y-check.sh  demo.sh  viewport-check.md
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  mcp_server.rs  state.rs
static/: admin.css  admin.html  admin.js  app.js  connections.html  connections.js  index.html  login.html  login.js  mfa.css  mfa.html  mfa.js  style.css
tests/: audit_export_integration.rs  auto_exec_governance_integration.rs  catalog_search_integration.rs  contract_api_routes.rs  contract_demo_workspace.rs  contract_errors.rs  contract_schema.rs  federation_hardening_regression_integration.rs  headless_provisioning_integration.rs  integration_oauth_roundtrip.rs  integration_peer_manifest.rs  integration_telemetry.rs  observability_capture_integration.rs  observability_push_integration.rs  observability_read_integration.rs  phase01_chat.rs  phase02_conversations.rs  phase03_workspaces.rs  phase04_nws_connector.rs  phase05_signals.rs  phase05b_rule_diagnostics.rs  phase06_critic.rs  phase07_routing.rs  phase08_auth.rs  phase09_delivery.rs  phase10_auto_exec.rs  phase11_mcp_server.rs  phase12_peer.rs  phase13_connectors.rs  phase13_demo.rs  phase14_bindings.rs  phase_chart_aggregates.rs  phase_chart_peer.rs  phase_document_panels.rs  phase_event_layers.rs  phase_federation_hardening.rs  phase_geojson_poll.rs  phase_map_layers.rs  phase_peer_token_refresh.rs  phase_push_ingress.rs  (+5 more)
(+219 files in other folders)
